--- a/poppincat-api/values.yaml
+++ b/poppincat-api/values.yaml
@@ -6,7 +6,7 @@ projectName: poppin-api
 image:
   repository: 610811086515.dkr.ecr.us-west-1.amazonaws.com/poppin-api
   pullPolicy: IfNotPresent
-  tag: "v1.0.0"
+  tag: 9e9b12cf
   containerPort: 3017
 
 imagePullSecrets:
