--- a/poppincat-api/values.yaml
+++ b/poppincat-api/values.yaml
@@ -33,24 +33,23 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: LoadBalancer
+  type: ClusterIP
   port: 80
 
 ingress:
-  enabled: false
+  enabled: true
   annotations:
-    kubernetes.io/ingress.class: "traefik"
-    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
-    cert-manager.io/cluster-issuer: letsencrypt-staging
+    kubernetes.io/ingress.class: "nginx"
+#    cert-manager.io/cluster-issuer: letsencrypt-staging
   hosts:
-    - host: demo.example.com
+    - host: api-ingress.poppincat.com
       paths:
         - path: /
           pathType: Prefix
-  tls:
-   - secretName: poppin-api-tls
-     hosts:
-       - demo.example.com
+  # tls:
+  #  - secretName: poppin-api-tls
+  #    hosts:
+  #      - demo.example.com
 
 resources:
   limits:
@@ -61,8 +60,8 @@ resources:
     memory: 512Mi
 
 autoscaling:
-  enabled: false
-  minReplicas: 3
+  enabled: true
+  minReplicas: 1
   maxReplicas: 7
   targetCPUUtilizationPercentage: 80
   targetMemoryUtilizationPercentage: 80
