--- a/poppincat-api/dev-values.yaml
+++ b/poppincat-api/dev-values.yaml
@@ -42,7 +42,7 @@ ingress:
     kubernetes.io/ingress.class: "nginx"
 #    cert-manager.io/cluster-issuer: letsencrypt-staging
   hosts:
-    - host: api-ingress.poppincat.com
+    - host: dev-api-ingress.poppincat.com
       paths:
         - path: /
           pathType: Prefix
