--- a/poppincat-api/dev-values.yaml
+++ b/poppincat-api/dev-values.yaml
@@ -6,7 +6,7 @@ projectName: poppin-api
 image:
   repository: 610811086515.dkr.ecr.us-west-1.amazonaws.com/poppin-api
   pullPolicy: IfNotPresent
-  tag: b34feb0c
+  tag: dev-3e8b5975
   containerPort: 3017
 
 imagePullSecrets:
