--- a/poppincat-api/stag-values.yaml
+++ b/poppincat-api/stag-values.yaml
@@ -7,7 +7,7 @@ projectName: poppin-api
 image:
   repository: 610811086515.dkr.ecr.us-west-1.amazonaws.com/poppin-api
   pullPolicy: IfNotPresent
-  tag: f18e8151
+  tag: staging-bf3e9d2d
   containerPort: 3017
 
 imagePullSecrets:
