--- a/poppincat-api/prod-values.yaml
+++ b/poppincat-api/prod-values.yaml
@@ -7,7 +7,7 @@ projectName: poppin-api
 image:
   repository: 610811086515.dkr.ecr.us-west-1.amazonaws.com/poppin-api
   pullPolicy: IfNotPresent
-  tag: 85b526a0
+  tag: production-c90c73ab
   containerPort: 3017
 
 imagePullSecrets:
