--- a/poppincat-admin/prod-values.yaml
+++ b/poppincat-admin/prod-values.yaml
@@ -1,14 +1,14 @@
 # Declare variables to be passed into your templates.
-environment: staging
+environment: production
 
 replicaCount: 1
-projectName: poppin-api
+projectName: popin-admin
 
 image:
-  repository: 610811086515.dkr.ecr.us-west-1.amazonaws.com/poppin-api
+  repository: 610811086515.dkr.ecr.us-west-1.amazonaws.com/popin-admin
   pullPolicy: IfNotPresent
-  tag: f18e8151
-  containerPort: 3017
+  tag: 85b526a0
+  containerPort: 3015
 
 imagePullSecrets:
   - name: regcred
@@ -43,12 +43,12 @@ ingress:
     kubernetes.io/ingress.class: "nginx"
 #    cert-manager.io/cluster-issuer: letsencrypt-staging
   hosts:
-    - host: stag-api-ingress.poppincat.com
+    - host: admin.poppincat.com
       paths:
         - path: /
           pathType: Prefix
   # tls:
-  #  - secretName: poppin-api-tls
+  #  - secretName: popin-admin-tls
   #    hosts:
   #      - demo.example.com
 
@@ -63,7 +63,7 @@ resources:
 autoscaling:
   enabled: true
   minReplicas: 1
-  maxReplicas: 2
+  maxReplicas: 4
   targetCPUUtilizationPercentage: 80
   targetMemoryUtilizationPercentage: 80
 
