--- a/poppincat-admin/stag-values.yaml
+++ b/poppincat-admin/stag-values.yaml
@@ -2,13 +2,13 @@
 environment: staging
 
 replicaCount: 1
-projectName: poppin-api
+projectName: popin-admin
 
 image:
-  repository: 610811086515.dkr.ecr.us-west-1.amazonaws.com/poppin-api
+  repository: 610811086515.dkr.ecr.us-west-1.amazonaws.com/popin-admin
   pullPolicy: IfNotPresent
   tag: f18e8151
-  containerPort: 3017
+  containerPort: 3000
 
 imagePullSecrets:
   - name: regcred
@@ -43,12 +43,12 @@ ingress:
     kubernetes.io/ingress.class: "nginx"
 #    cert-manager.io/cluster-issuer: letsencrypt-staging
   hosts:
-    - host: stag-api-ingress.poppincat.com
+    - host: stag-admin.poppincat.com
       paths:
         - path: /
           pathType: Prefix
   # tls:
-  #  - secretName: poppin-api-tls
+  #  - secretName: popin-admin-tls
   #    hosts:
   #      - demo.example.com
 
