--- a/poppincat-api/dev-values.yaml
+++ b/poppincat-api/dev-values.yaml
@@ -60,9 +60,9 @@ resources:
     memory: 512Mi
 
 autoscaling:
-  enabled: false
+  enabled: true
   minReplicas: 1
-  maxReplicas: 7
+  maxReplicas: 2
   targetCPUUtilizationPercentage: 80
   targetMemoryUtilizationPercentage: 80
 
