--- a/poppincat-admin/dev-values.yaml
+++ b/poppincat-admin/dev-values.yaml
@@ -40,6 +40,7 @@ ingress:
   enabled: true
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/proxy-body-size: 100m
 #    cert-manager.io/cluster-issuer: letsencrypt-staging
   hosts:
     - host: dev-admin.poppincat.com
