--- a/poppincat-admin/stag-values.yaml
+++ b/poppincat-admin/stag-values.yaml
@@ -41,6 +41,7 @@ ingress:
   enabled: true
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/proxy-body-size: 100m
 #    cert-manager.io/cluster-issuer: letsencrypt-staging
   hosts:
     - host: stag-admin.poppincat.com
