--- a/poppincat-api/dev-values.yaml
+++ b/poppincat-api/dev-values.yaml
@@ -42,6 +42,7 @@ ingress:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/proxy-body-size: 100m
 #    cert-manager.io/cluster-issuer: letsencrypt-staging
+  ingressClass: "nginx"
   hosts:
     - host: dev-api-ingress.poppincat.com
       paths:
