--- a/poppincat-api/prod-values.yaml
+++ b/poppincat-api/prod-values.yaml
@@ -43,6 +43,7 @@ ingress:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/proxy-body-size: 100m
 #    cert-manager.io/cluster-issuer: letsencrypt-staging
+  ingressClass: "nginx"
   hosts:
     - host: prod-api-ingress.poppincat.com
       paths:
