--- a/poppincat-admin/Chart.yaml
+++ b/poppincat-admin/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: popin-admin
+name: poppin-admin
 description: A Web application Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
