--- a/poppincat-admin/stag-values.yaml
+++ b/poppincat-admin/stag-values.yaml
@@ -2,10 +2,10 @@
 environment: staging
 
 replicaCount: 1
-projectName: popin-admin
+projectName: poppin-admin
 
 image:
-  repository: 610811086515.dkr.ecr.us-west-1.amazonaws.com/popin-admin
+  repository: 610811086515.dkr.ecr.us-west-1.amazonaws.com/poppin-admin
   pullPolicy: IfNotPresent
   tag: f18e8151
   containerPort: 3000
@@ -50,7 +50,7 @@ ingress:
         - path: /
           pathType: Prefix
   # tls:
-  #  - secretName: popin-admin-tls
+  #  - secretName: poppin-admin-tls
   #    hosts:
   #      - demo.example.com
 
