--- a/poppincat-admin/templates/service.yaml
+++ b/poppincat-admin/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "popin-admin.fullname" . }}
+  name: {{ include "poppincat-admin.fullname" . }}
   labels:
-    {{- include "popin-admin.labels" . | nindent 4 }}
+    {{- include "poppincat-admin.labels" . | nindent 4 }}
 spec:
   selector:
     app: {{ .Values.projectName }}
@@ -13,4 +13,4 @@ spec:
     targetPort: {{ .Values.image.containerPort }}
   type: {{ .Values.service.type }}
   selector:
-  {{- include "popin-admin.selectorLabels" . | nindent 4 }}
+  {{- include "poppincat-admin.selectorLabels" . | nindent 4 }}
