--- a/poppincat-admin/templates/serviceaccount.yaml
+++ b/poppincat-admin/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "popin-admin.serviceAccountName" . }}
+  name: {{ include "poppincat-admin.serviceAccountName" . }}
   labels:
-    {{- include "popin-admin.labels" . | nindent 4 }}
+    {{- include "poppincat-admin.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
