--- a/poppincat-admin/dev-values.yaml
+++ b/poppincat-admin/dev-values.yaml
@@ -6,7 +6,7 @@ projectName: poppin-admin
 image:
   repository: 610811086515.dkr.ecr.us-west-1.amazonaws.com/poppin-admin
   pullPolicy: IfNotPresent
-  tag: b34feb0c
+  tag: dev-4a9c18d8
   containerPort: 3015
 
 imagePullSecrets:
