--- a/poppincat-admin/prod-values.yaml
+++ b/poppincat-admin/prod-values.yaml
@@ -7,7 +7,7 @@ projectName: poppin-admin
 image:
   repository: 610811086515.dkr.ecr.us-west-1.amazonaws.com/poppin-admin
   pullPolicy: IfNotPresent
-  tag: 85b526a0
+  tag: production-4a9c18d8
   containerPort: 3015
 
 imagePullSecrets:
